[metadata]
name = SpeedRunnersAI
author = Chainso
version = file: version.txt
description = Reinforcement learning AI for SpeedRunners
long_description = file: README.md, LICENSE.md
license = GNU General Public License v3.0
license_file = LICENSE.md
classifiers =
    License :: GPL License
    Programming Langauge :: Python 3
    Programming Language :: Python 3.7

[options]
packages = find:
install_requires =
    torch>=1.1
    pymem
    keyboard
    d3dshot
    hlrl
    pywin32

[options.extras_require]
cudatoolkit = cudatoolkit>=10.2